fix: prevent long links from overflowing

--- a/src/components/links/LinkItem.module.css
+++ b/src/components/links/LinkItem.module.css
@@ -14,3 +14,9 @@
 .link-item {
   scroll-snap-align: start;
 }
+
+.link-item-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 75%;
+}
